--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,8 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install FFmpeg via npm (faster)
-        run: |
-          npm install -g @ffmpeg-installer/ffmpeg
-          echo "$(npm root -g)/@ffmpeg-installer/ffmpeg/ffmpeg" >> $GITHUB_PATH
+      - name: Install dependencies
+        run: npm ci
 
       - name: Generate pages and content
         run: |
